--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
   <a href="virgintv://ie/myprime">virgintv://ie/ Myprime Page</a><br>
   <a href="virgintv://ie/ondemand">virgintv://ie/ Ondemand Page</a><br>
   <a href="virgintv://ie/myvideos">virgintv://ie/ Myvideos Page</a><br>
-  <a href="https://preprod-www.virginmediatv.ie/dl/ie/watchtv/station/753737255240/program/crid:~~2F~~2Fbds.tv~~2F207493737/listing/crid:~~2F~~2Fbds.tv~~2F235444786-imi:001000000046F791">virgintv://ie/ Live</a><br>
-   <a href="https://preprod-www.virginmediatv.ie/dl/ie/watchtv/station/753737255195/program/crid:~~2F~~2Fbds.tv~~2F147805183/listing/crid:~~2F~~2Fbds.tv~~2F147805183-imi:001000000046F465">virgintv://ie/ Live-2</a><br>
+  <a href="https://www.virginmediatv.ie/dl/ie/watchtv/station/753737255240/program/crid:~~2F~~2Fbds.tv~~2F207493737/listing/crid:~~2F~~2Fbds.tv~~2F235444786-imi:001000000046F791">virgintv://ie/ Live</a><br>
+   <a href="https://www.virginmediatv.ie/dl/ie/watchtv/station/753737255195/program/crid:~~2F~~2Fbds.tv~~2F147805183/listing/crid:~~2F~~2Fbds.tv~~2F147805183-imi:001000000046F465">virgintv://ie/ Live-2</a><br>
   <a href="virgintv://ie/ondemand/show/crid:~~2F~~2Fupc.com~~2F0be69b59-45f5-4950-ac57-dc7b7f4e8cc8/season/crid:~~2F~~2Fupc.com~~2Fb5fa7b16-3719-419c-a3c9-c57c621d4608/episode/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMP2009000000379427">virgintv://ie/ M-S item #1</a><br>
   <a href="virgintv://ie/ondemand/group/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242177/item/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242177">virgintv://ie/ M-S item #2</a><br>
   <a href="virgintv://ie/myprime/group/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/item/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301">virgintv://ie/ M-S item #3</a><br>        
@@ -211,17 +211,17 @@
   <a href="virgintv://ie/watchtv/station/753737255332/program/crid:~~2F~~2Fbds.tv~~2F482945/listing/crid:~~2F~~2Fbds.tv~~2F482945-imi:001000000046CFA5">virgintv://ie/ TV guide item #2</a><br>
     
 
-   <a href="http://preprod-www.virginmediatv.ie/dl/ie/home">http://preprod-www.virginmediatv.ie/dl/ie/ Home Page NL</a><br>
-  <a href="http://preprod-www.virginmediatv.ie/dl/ie/tvguide">http://preprod-www.virginmediatv.ie/dl/ie/ TV-Guide Page</a><br>
-  <a href="http://preprod-www.virginmediatv.ie/dl/ie/watchtv">http://preprod-www.virginmediatv.ie/dl/ie/ WatchTV Page</a><br>
-  <a href="http://preprod-www.virginmediatv.ie/dl/ie/myprime">http://preprod-www.virginmediatv.ie/dl/ie/ Myprime Page</a><br>
-  <a href="http://preprod-www.virginmediatv.ie/dl/ie/ondemand">http://preprod-www.virginmediatv.ie/dl/ie/ Ondemand Page</a><br>
-  <a href="http://preprod-www.virginmediatv.ie/dl/ie/myvideos">http://preprod-www.virginmediatv.ie/dl/ie/ Myvideos Page</a><br>
+   <a href="http://www.virginmediatv.ie/dl/ie/home">http://preprod-www.virginmediatv.ie/dl/ie/ Home Page NL</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/tvguide">http://preprod-www.virginmediatv.ie/dl/ie/ TV-Guide Page</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/watchtv">http://preprod-www.virginmediatv.ie/dl/ie/ WatchTV Page</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/myprime">http://preprod-www.virginmediatv.ie/dl/ie/ Myprime Page</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/ondemand">http://preprod-www.virginmediatv.ie/dl/ie/ Ondemand Page</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/myvideos">http://preprod-www.virginmediatv.ie/dl/ie/ Myvideos Page</a><br>
  
-     <a href="https://preprod-www.virginmediatv.ie/dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F71f3f52a-9e49-4c36-9bd9-1bbff3dde9dc/season/crid:~~2F~~2Fupc.com~~2F2a2c0c31-420a-4d33-895e-ed7b2047137c/episode/crid:~~2F~~2Fupc.com~~2F10900~~2FBandBS01E01HD_new">http://preprod-www.virginmediatv.ie/dl/ie/ catch up item</a><br>                                                        
-  <a href="https://preprod-www.virginmediatv.ie/dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F0c39d0e2-742a-4a67-a392-853b9057697c/season/crid:~~2F~~2Fupc.com~~2Ffe646c14-56e5-4c69-8f68-853ad930d549/episode/crid:~~2F~~2Fupc.com~~2F10201~~2FTV3LITTLECHARMERS_01_01">www.virginmediatv.ie/dl/ie/ item M-S</a><br>
-   <a href="https://preprod-www.virginmediatv.ie/dl/ie/ondemand/show/crid:~~2F~~2Fupc.com~~2Fbddd4b68-3296-49fe-b08d-d92c7bc623c3/season/crid:~~2F~~2Fupc.com~~2F1402f19d-cf0d-4391-af83-7d571d44c7da/episode/crid:~~2F~~2Fupc.com~~2F10201~~2FRR01_01">www.virginmediatv.ie/dl/ie/ item M-S</a><br>
-    <a href="https://preprod-www.virginmediatv.ie/dl/ie/watchtv/station/753737255346/program/crid:~~2F~~2Fbds.tv~~2F48011621/listing/crid:~~2F~~2Fbds.tv~~2F48011621-imi:001000000046E698">www.virginmediatv.ie/dl/ie/ TV guide item</a><br>
+     <a href="https://www.virginmediatv.ie/dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F71f3f52a-9e49-4c36-9bd9-1bbff3dde9dc/season/crid:~~2F~~2Fupc.com~~2F2a2c0c31-420a-4d33-895e-ed7b2047137c/episode/crid:~~2F~~2Fupc.com~~2F10900~~2FBandBS01E01HD_new">http://preprod-www.virginmediatv.ie/dl/ie/ catch up item</a><br>                                                        
+  <a href="https://www.virginmediatv.ie/dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F0c39d0e2-742a-4a67-a392-853b9057697c/season/crid:~~2F~~2Fupc.com~~2Ffe646c14-56e5-4c69-8f68-853ad930d549/episode/crid:~~2F~~2Fupc.com~~2F10201~~2FTV3LITTLECHARMERS_01_01">www.virginmediatv.ie/dl/ie/ item M-S</a><br>
+   <a href="https://www.virginmediatv.ie/dl/ie/ondemand/show/crid:~~2F~~2Fupc.com~~2Fbddd4b68-3296-49fe-b08d-d92c7bc623c3/season/crid:~~2F~~2Fupc.com~~2F1402f19d-cf0d-4391-af83-7d571d44c7da/episode/crid:~~2F~~2Fupc.com~~2F10201~~2FRR01_01">www.virginmediatv.ie/dl/ie/ item M-S</a><br>
+    <a href="https://www.virginmediatv.ie/dl/ie/watchtv/station/753737255346/program/crid:~~2F~~2Fbds.tv~~2F48011621/listing/crid:~~2F~~2Fbds.tv~~2F48011621-imi:001000000046E698">www.virginmediatv.ie/dl/ie/ TV guide item</a><br>
   <a href="https://www.ziggogo.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F17f2293c-94b0-4c17-9e17-c445aeb22629/season/crid:~~2F~~2Fupc.com~~2F7d48fccd-8bd3-4d6c-82c8-3d49e676f626/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379104">www.ziggogo.tv/dl/nl/ My prime item show</a><br>
   <a href="https://www.ziggogo.tv/dl/nl/myprime/group/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000232282/item/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000232282">www.ziggogo.tv/dl/nl/ My prime item</a><br>
 <a href="https://www.ziggogo.tv/dl/nl/myprime/group/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000322501/item/crid:~~2F~~2Fupc.com~~2F37500~~2FAZIA0000000000322501">www.ziggogo.tv/dl/nl/ My prime item movie</a><br>
@@ -238,12 +238,12 @@
 <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Virgin. Deeplinking. Universal format</h4>
 <p>
-  <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/ M-S landing page</a><br>
-  <a href="https://preprod-www.virginmediatv.ie/en">https://www.virginmediatv.ie/Home landing page</a><br>
- <a href="https://preprod-www.virginmediatv.ie/en/live-channels">https://www.virginmediatv.ie/ Watch TV landing page</a><br>
-  <a href="https://preprod-www.virginmediatv.ie/en/tv-guide">https://www.virginmediatv.ie/ TV guide landing page</a><br>
-   <a href="https://preprod-www.virginmediatv.ie/en/ondemand">https://www.virginmediatv.ie/ On Demand landing page</a><br>
-  <a href="https://preprod-www.virginmediatv.ie/en/my-videos">https://www.virginmediatv.ie/ My videos landing page</a><br>
+  <a href="https://www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/ M-S landing page</a><br>
+  <a href="https://www.virginmediatv.ie/en">https://www.virginmediatv.ie/Home landing page</a><br>
+ <a href="https://www.virginmediatv.ie/en/live-channels">https://www.virginmediatv.ie/ Watch TV landing page</a><br>
+  <a href="https://www.virginmediatv.ie/en/tv-guide">https://www.virginmediatv.ie/ TV guide landing page</a><br>
+   <a href="https://www.virginmediatv.ie/en/ondemand">https://www.virginmediatv.ie/ On Demand landing page</a><br>
+  <a href="https://www.virginmediatv.ie/en/my-videos">https://www.virginmediatv.ie/ My videos landing page</a><br>
   
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/en/M-S Page</a><br>
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F73196d75-8618-46d5-ab32-e866290d314e/ep-01-banana-in-the-stone/crid%3A~~2F~~2Fupc.com~~2F186071~~2FPACK0000000000808300/ep-01-banana-in-the-stone">virgintv M-S item #1</a><br>
@@ -253,7 +253,7 @@
   <a href="https://www.ziggogo.tv/nl/my-videos.html">https://www.ziggogo.tv/nl/ my-videos Page</a><br>
   <a href="https://www.ziggogo.tv/nl.html">https://www.ziggogo.tv/nl/ home Page</a><br>
   <a href="https://www.ziggogo.tv/nl/tv-kijken.html">https://www.ziggogo.tv/nl/ watch tv Page</a><br>
-  <a href="https://preprod-www.virginmediatv.ie/en/movies-and-boxsets/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/hurricane-season/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/hurricane-season.html">https://www.virginmediatv.ie/en/ movies-and-boxsets item</a><br>
+  <a href="https://www.virginmediatv.ie/en/movies-and-boxsets/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/hurricane-season/crid%3A~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/hurricane-season.html">https://www.virginmediatv.ie/en/ movies-and-boxsets item</a><br>
   <a href="https://www.ziggogo.tv/nl/ondemand/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000364772/13-hours-the-secret-soldiers-of-benghazi/crid%3A~~2F~~2Fupc.com~~2F1010~~2FTLPK2009000000364772/13-hours-the-secret-soldiers-of-benghazi.html">https://www.ziggogo.tv/nl/ On demand item</a><br>
   <a href="https://www.ziggogo.tv/nl/my-prime/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2Ff5023296-8c62-4964-b095-7337f8d0dd8e/teenage-mutant-ninja-turtles/crid%3A~~2F~~2Fupc.com~~2F20350~~2FMTV_P_ABC286715-524023/teenage-mutant-ninja-turtles.html">ziggogo://nl/ My prime/nl/Teenage Mutant Ninja Turtles</a>
   
