--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
   <a href="virgintv://ie/watchtv/station/753737255332/program/crid:~~2F~~2Fbds.tv~~2F482945/listing/crid:~~2F~~2Fbds.tv~~2F482945-imi:001000000046CFA5">virgintv://ie/ TV guide item #2</a><br>
     
 
-   <a href="http://www.virginmediatv.ie/dl/ie/home">http://preprod-www.virginmediatv.ie/dl/ie/ Home Page NL</a><br>
-  <a href="http://www.virginmediatv.ie/dl/ie/tvguide">http://preprod-www.virginmediatv.ie/dl/ie/ TV-Guide Page</a><br>
-  <a href="http://www.virginmediatv.ie/dl/ie/watchtv">http://preprod-www.virginmediatv.ie/dl/ie/ WatchTV Page</a><br>
-  <a href="http://www.virginmediatv.ie/dl/ie/myprime">http://preprod-www.virginmediatv.ie/dl/ie/ Myprime Page</a><br>
-  <a href="http://www.virginmediatv.ie/dl/ie/ondemand">http://preprod-www.virginmediatv.ie/dl/ie/ Ondemand Page</a><br>
-  <a href="http://www.virginmediatv.ie/dl/ie/myvideos">http://preprod-www.virginmediatv.ie/dl/ie/ Myvideos Page</a><br>
+   <a href="http://www.virginmediatv.ie/dl/ie/home">http://www.virginmediatv.ie/dl/ie/ Home Page NL</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/tvguide">http://www.virginmediatv.ie/dl/ie/ TV-Guide Page</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/watchtv">http://www.virginmediatv.ie/dl/ie/ WatchTV Page</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/myprime">http://www.virginmediatv.ie/dl/ie/ Myprime Page</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/ondemand">http://www.virginmediatv.ie/dl/ie/ Ondemand Page</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/myvideos">http://www.virginmediatv.ie/dl/ie/ Myvideos Page</a><br>
  
-     <a href="https://www.virginmediatv.ie/dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F71f3f52a-9e49-4c36-9bd9-1bbff3dde9dc/season/crid:~~2F~~2Fupc.com~~2F2a2c0c31-420a-4d33-895e-ed7b2047137c/episode/crid:~~2F~~2Fupc.com~~2F10900~~2FBandBS01E01HD_new">http://preprod-www.virginmediatv.ie/dl/ie/ catch up item</a><br>                                                        
+     <a href="https://www.virginmediatv.ie/dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F71f3f52a-9e49-4c36-9bd9-1bbff3dde9dc/season/crid:~~2F~~2Fupc.com~~2F2a2c0c31-420a-4d33-895e-ed7b2047137c/episode/crid:~~2F~~2Fupc.com~~2F10900~~2FBandBS01E01HD_new">http://www.virginmediatv.ie/dl/ie/ catch up item</a><br>                                                        
   <a href="https://www.virginmediatv.ie/dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F0c39d0e2-742a-4a67-a392-853b9057697c/season/crid:~~2F~~2Fupc.com~~2Ffe646c14-56e5-4c69-8f68-853ad930d549/episode/crid:~~2F~~2Fupc.com~~2F10201~~2FTV3LITTLECHARMERS_01_01">www.virginmediatv.ie/dl/ie/ item M-S</a><br>
    <a href="https://www.virginmediatv.ie/dl/ie/ondemand/show/crid:~~2F~~2Fupc.com~~2Fbddd4b68-3296-49fe-b08d-d92c7bc623c3/season/crid:~~2F~~2Fupc.com~~2F1402f19d-cf0d-4391-af83-7d571d44c7da/episode/crid:~~2F~~2Fupc.com~~2F10201~~2FRR01_01">www.virginmediatv.ie/dl/ie/ item M-S</a><br>
     <a href="https://www.virginmediatv.ie/dl/ie/watchtv/station/753737255346/program/crid:~~2F~~2Fbds.tv~~2F48011621/listing/crid:~~2F~~2Fbds.tv~~2F48011621-imi:001000000046E698">www.virginmediatv.ie/dl/ie/ TV guide item</a><br>
