--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <p><a href="hgo://ch/home">hgo://ch/ Home-CH</a> </p>  
 <p><a href="hgo://de/myprime">hgo://ch/ Home-CH</a> </p>  
 <p><a href="hgo://nl">hgo://nl without Home</a>  </p>
+<p><a href="hgo://at/ondemand/show/crid:~~2F~~2Fupc.com~~2F926b1429-fc6a-4c80-aa68-2abdd5bbbc9f/season/crid:~~2F~~2Fupc.com~~2F66a40b0f-488e-4dae-849c-c2aebf999231/episode/crid:~~2F~~2Fupc.com~~2F2002~~2FBAMP2009000000325300">hgo://at On Demand item</a>  </p>      
         
 <p>
 <h4>
@@ -60,6 +61,7 @@
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379031">https://www.horizon.tv/dl/nl/ Show/my-prime/season/episode</a><br>
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0">https://www.horizon.tv/dl/nl/ Show/my-prime/season</a><br>
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">https://www.horizon.tv/dl/nl/ Show/my-prime</a><br>
+<p><a href="https://www.horizon.tv/dl/at/ondemand/show/crid:~~2F~~2Fupc.com~~2F926b1429-fc6a-4c80-aa68-2abdd5bbbc9f/season/crid:~~2F~~2Fupc.com~~2F66a40b0f-488e-4dae-849c-c2aebf999231/episode/crid:~~2F~~2Fupc.com~~2F2002~~2FBAMP2009000000325300">https://www.horizon.tv/dl/at/ On Demand item</a></p>      
 
 <p><h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Deeplinking. Universal format</h2></p>
 
