--- a/index.html
+++ b/index.html
@@ -202,9 +202,11 @@
   <a href="virgintv://ie/myprime">virgintv://ie/ Myprime Page</a><br>
   <a href="virgintv://ie/ondemand">virgintv://ie/ Ondemand Page</a><br>
   <a href="virgintv://ie/myvideos">virgintv://ie/ Myvideos Page</a><br>
-  <a href="https://www.virginmediatv.ie/dl/ie/watchtv/station/753737255240/program/crid:~~2F~~2Fbds.tv~~2F207493737/listing/crid:~~2F~~2Fbds.tv~~2F235444786-imi:001000000046F791">virgintv://ie/ Live</a><br>
-   <a href="https://www.virginmediatv.ie/dl/ie/watchtv/station/753737255195/program/crid:~~2F~~2Fbds.tv~~2F147805183/listing/crid:~~2F~~2Fbds.tv~~2F147805183-imi:001000000046F465">virgintv://ie/ Live-2</a><br>
-  <a href="virgintv://ie/ondemand/show/crid:~~2F~~2Fupc.com~~2F0be69b59-45f5-4950-ac57-dc7b7f4e8cc8/season/crid:~~2F~~2Fupc.com~~2Fb5fa7b16-3719-419c-a3c9-c57c621d4608/episode/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMP2009000000379427">virgintv://ie/ M-S item #1</a><br>
+   <a href="virgintv://ie/myvideeeeos">virgintv://ie/ Wrong - Myvideos Page</a><br>
+   <a href="virgintv://ie/ondemuoand">virgintv://ie/ Wrong - Ondemand Page</a><br>
+  <a href=""virgintv://ie/watchtv/station/753737255240/program/crid:~~2F~~2Fbds.tv~~2F207493737/listing/crid:~~2F~~2Fbds.tv~~2F235444786-imi:001000000046F791">https://www.virginmediatv.ie/dl/ie Live</a><br>
+   <a href=""virgintv://ie/watchtv/station/753737255195/program/crid:~~2F~~2Fbds.tv~~2F147805183/listing/crid:~~2F~~2Fbds.tv~~2F147805183-imi:001000000046F465">https://www.virginmediatv.ie/dl/ie Live-2</a><br>
+    <a href="virgintv://ie/ondemand/show/crid:~~2F~~2Fupc.com~~2F0be69b59-45f5-4950-ac57-dc7b7f4e8cc8/season/crid:~~2F~~2Fupc.com~~2Fb5fa7b16-3719-419c-a3c9-c57c621d4608/episode/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMP2009000000379427">virgintv://ie/ M-S item #1</a><br>
   <a href="virgintv://ie/ondemand/group/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242177/item/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242177">virgintv://ie/ M-S item #2</a><br>
   <a href="virgintv://ie/myprime/group/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/item/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301">virgintv://ie/ M-S item #3</a><br>        
   
@@ -218,7 +220,11 @@
   <a href="http://www.virginmediatv.ie/dl/ie/myprime">http://www.virginmediatv.ie/dl/ie/ Myprime Page</a><br>
   <a href="http://www.virginmediatv.ie/dl/ie/ondemand">http://www.virginmediatv.ie/dl/ie/ Ondemand Page</a><br>
   <a href="http://www.virginmediatv.ie/dl/ie/myvideos">http://www.virginmediatv.ie/dl/ie/ Myvideos Page</a><br>
+   <a href="http://www.virginmediatv.ie/dl/ie/ondeiimand">http://www.virginmediatv.ie/dl/ie/ Wrong Ondemand Page</a><br>
+  <a href="http://www.virginmediatv.ie/dl/ie/myhhvideos">http://www.virginmediatv.ie/dl/ie/ Wrong Myvideos Page</a><br>
  
+  <a href="https://www.virginmediatv.ie/dl/ie/watchtv/station/753737255240/program/crid:~~2F~~2Fbds.tv~~2F207493737/listing/crid:~~2F~~2Fbds.tv~~2F235444786-imi:001000000046F791">https://www.virginmediatv.ie/dl/ie Live</a><br>
+   <a href="https://www.virginmediatv.ie/dl/ie/watchtv/station/753737255195/program/crid:~~2F~~2Fbds.tv~~2F147805183/listing/crid:~~2F~~2Fbds.tv~~2F147805183-imi:001000000046F465">https://www.virginmediatv.ie/dl/ie Live-2</a><br>
      <a href="https://www.virginmediatv.ie/dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F71f3f52a-9e49-4c36-9bd9-1bbff3dde9dc/season/crid:~~2F~~2Fupc.com~~2F2a2c0c31-420a-4d33-895e-ed7b2047137c/episode/crid:~~2F~~2Fupc.com~~2F10900~~2FBandBS01E01HD_new">http://www.virginmediatv.ie/dl/ie/ catch up item</a><br>                                                        
   <a href="https://www.virginmediatv.ie/dl/ie/myprime/show/crid:~~2F~~2Fupc.com~~2F0c39d0e2-742a-4a67-a392-853b9057697c/season/crid:~~2F~~2Fupc.com~~2Ffe646c14-56e5-4c69-8f68-853ad930d549/episode/crid:~~2F~~2Fupc.com~~2F10201~~2FTV3LITTLECHARMERS_01_01">www.virginmediatv.ie/dl/ie/ item M-S</a><br>
    <a href="https://www.virginmediatv.ie/dl/ie/ondemand/show/crid:~~2F~~2Fupc.com~~2Fbddd4b68-3296-49fe-b08d-d92c7bc623c3/season/crid:~~2F~~2Fupc.com~~2F1402f19d-cf0d-4391-af83-7d571d44c7da/episode/crid:~~2F~~2Fupc.com~~2F10201~~2FRR01_01">www.virginmediatv.ie/dl/ie/ item M-S</a><br>
@@ -249,6 +255,9 @@
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets">https://www.virginmediatv.ie/en/M-S Page</a><br>
   <a href="https://www.virginmediatv.ie/en/movies-and-boxsets/tv-asset.html/crid%3A~~2F~~2Fupc.com~~2F73196d75-8618-46d5-ab32-e866290d314e/ep-01-banana-in-the-stone/crid%3A~~2F~~2Fupc.com~~2F186071~~2FPACK0000000000808300/ep-01-banana-in-the-stone">virgintv M-S item #1</a><br>
   <a href="https://www.virginmediatv.ie/en/live-channels/live-channel.html/753737255332/1483610400000">virgintv TV guide item</a><br>
+  <a href="https://www.virginmediatv.ie/en/ondcdemand">https://www.virginmediatv.ie/ Wrong On Demand landing page</a><br>
+  <a href="https://www.virginmediatv.ie/en/my-vidsfdfeos">https://www.virginmediatv.ie/ Wrong My videos landing page</a><br>
+  
   <a href="https://www.ziggogo.tv/nl/tv-gids.html">https://www.ziggogo.tv/nl/ tv-gids Page</a><br>
 <a href="https://www.ziggogo.tv/nl/ondemand.html">https://www.ziggogo.tv/nl/ ondemand Page</a><br>
   <a href="https://www.ziggogo.tv/nl/my-videos.html">https://www.ziggogo.tv/nl/ my-videos Page</a><br>
