--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
   <a href="virgintv://ie/myvideos">virgintv://ie/ Myvideos Page</a><br>
    <a href="virgintv://ie/myvideeeeos">virgintv://ie/ Wrong - Myvideos Page</a><br>
    <a href="virgintv://ie/ondemuoand">virgintv://ie/ Wrong - Ondemand Page</a><br>
-  <a href=""virgintv://ie/watchtv/station/753737255240/program/crid:~~2F~~2Fbds.tv~~2F207493737/listing/crid:~~2F~~2Fbds.tv~~2F235444786-imi:001000000046F791">https://www.virginmediatv.ie/dl/ie Live</a><br>
-   <a href=""virgintv://ie/watchtv/station/753737255195/program/crid:~~2F~~2Fbds.tv~~2F147805183/listing/crid:~~2F~~2Fbds.tv~~2F147805183-imi:001000000046F465">https://www.virginmediatv.ie/dl/ie Live-2</a><br>
+  <a href="virgintv://ie/watchtv/station/753737255240/program/crid:~~2F~~2Fbds.tv~~2F207493737/listing/crid:~~2F~~2Fbds.tv~~2F235444786-imi:001000000046F791">https://www.virginmediatv.ie/dl/ie Live</a><br>
+   <a href="virgintv://ie/watchtv/station/753737255195/program/crid:~~2F~~2Fbds.tv~~2F147805183/listing/crid:~~2F~~2Fbds.tv~~2F147805183-imi:001000000046F465">https://www.virginmediatv.ie/dl/ie Live-2</a><br>
     <a href="virgintv://ie/ondemand/show/crid:~~2F~~2Fupc.com~~2F0be69b59-45f5-4950-ac57-dc7b7f4e8cc8/season/crid:~~2F~~2Fupc.com~~2Fb5fa7b16-3719-419c-a3c9-c57c621d4608/episode/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMP2009000000379427">virgintv://ie/ M-S item #1</a><br>
   <a href="virgintv://ie/ondemand/group/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242177/item/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242177">virgintv://ie/ M-S item #2</a><br>
   <a href="virgintv://ie/myprime/group/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301/item/crid:~~2F~~2Fupc.com~~2F7100~~2FIEMF2009000000242301">virgintv://ie/ M-S item #3</a><br>        
