--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <p><a href="hgo://nl/tvguide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2Fs37510974/de-wereld-draait-door/crid%3A~~2F~~2Fbds.tv~~2F230140383-imi%3A0010000000808F90/de-wereld-draait-door">hgo://nl/ replay item-NL</a></p>
 <p><a href="hgo://ch/myprime/group/crid:~~2F~~2Fupc.com~~2F62e0cc9b-d2f3-496e-b5ff-46cfeac57be1/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPS2009000000374740">hgo://ch/ My prime item-CH</a></p>
    <p><a href="hgo://ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000ABD7/3%20auf%20zwei/crid%3A~~2F~~2Fbds.tv~~2F625983816-imi%3A0010000000D47C6E/3%20auf%20zwei">hgo://ch/ Replay item-CH</a></p>
-    <p><a href="https://www.horizon.tv/dl/nl/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000ABD7/3%20auf%20zwei/crid%3A~~2F~~2Fbds.tv~~2F625983816-imi%3A0010000000D47C6E/3%20auf%20zwei">https://www.horizon.tv/dl/nl/ Replay item-CH</a></p>
+    <p><a href="https://www.horizon.tv/dl/ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000ABD7/3%20auf%20zwei/crid%3A~~2F~~2Fbds.tv~~2F625983816-imi%3A0010000000D47C6E/3%20auf%20zwei">https://www.horizon.tv/dl/ch/ Replay item-CH</a></p>
 <p><a href="hgo://de/maxdome/tv-asset.html/crid%3A~~2F~~2Funitymedia.de~~2F9381ab8f-ec75-4bf9-b84f-693bcdcd4150/stadt-land-mord/crid%3A~~2F~~2Funitymedia.de~~2F778868131000~~2FMXDSV100000000014399/stadt-land-mord">hgo://de/ Maxdome item DE</a></p>
 
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0/episode/crid:~~2F~~2Fupc.com~~2F1010~~2FNSMY2009000000379031">https://www.horizon.tv/dl/nl/ Show/my-prime/season/episode</a><br>
