--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
    <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Different countries. Universal format</h4></p>
 
+<p><a href="https://www.horizon.tv/en_ch.html">https://www.horizon.tv/en_ch/ Home CH</a></p>
+<p><a href="https://www.horizon.tv/en_ch/watch-tv.html">https://www.horizon.tv/en_ch/ watch-tv CH</a></p>
+<p><a href="https://www.horizon.tv/en_ch/tv-guide.html">https://www.horizon.tv/en_ch/ tv-guide CH</a></p>
+<p><a href="https://www.horizon.tv/en_ch/my-prime.html">https://www.horizon.tv/en_ch/ my-prime CH</a></p>
+<p><a href="https://www.horizon.tv/en_ch/my-videos.html">https://www.horizon.tv/en_ch/ my-videos CH</a></p>
+<p><a href="https://www.horizon.tv/en_ch/my-prime/movie-asset.html/crid%3A~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000381599/flock-the-dunkle-triebe.html">https://www.horizon.tv/en_ch/ my-prime ITEM CH</a></p>
+
 <p><a href="https://www.horizon.tv/en_ch/my-prime.html">https://www.horizon.tv/en_ch/ My prime CH</a></p>
 <p><a href="https://www.horizon.tv/en_ch/watch-tv/live-channel.html/541614119263/watch">https://www.horizon.tv/en_ch/ Live channel CH</a></p>
 <p><a href="https://www.horizon.tv/en_ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Fbds.tv~~2F120673537/mein-idol-messi/crid%3A~~2F~~2Fbds.tv~~2F120673537-imi%3A0010000000BE0917/mein-idol-messi.html">https://www.horizon.tv/en_ch/ Replay CH</a></p>
