--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <p><a href="https://www.horizon.tv/dl/at/ondemand/show/crid:~~2F~~2Fupc.com~~2F926b1429-fc6a-4c80-aa68-2abdd5bbbc9f/season/crid:~~2F~~2Fupc.com~~2F66a40b0f-488e-4dae-849c-c2aebf999231/episode/crid:~~2F~~2Fupc.com~~2F2002~~2FBAMP2009000000325300">https://www.horizon.tv/dl/at/ On Demand item -> should be opened in HZN</a></p> 
 
 <p><h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Deeplinking. Universal format https://www.horizon.tv/nl_nl.html</h2></p>
-
+<h5><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NL</h5></p>
 <p><a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL -> should be opened in Ziggo</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/ondemand.html">On demand NL -> should be opened in Ziggo</a></p>
 <p><a href="https://www.horizon.tv/nl_nl/tv-gids.html">tv-gids NL -> should be opened in Ziggo</a></p>
@@ -138,7 +138,7 @@
 <p>
    <h4>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Different countries. Universal format https://www.horizon.tv/en_ch.html</h4></p>
-
+<h5><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries</h5></p>
 <p><a href="https://www.horizon.tv/en_ch.html">https://www.horizon.tv/en_ch/ Home CH -> should be opened in HZN</a></p>
 <p><a href="https://www.horizon.tv/en_ch/watch-tv.html">https://www.horizon.tv/en_ch/ watch-tv CH -> should be opened in HZN</a></p>
 <p><a href="https://www.horizon.tv/en_ch/tv-guide.html">https://www.horizon.tv/en_ch/ tv-guide CH -> should be opened in HZN</a></p>
