--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d/season/crid:~~2F~~2Fupc.com~~2F5606bc57-3f78-4eec-9521-fa5ee081a9a0">https://www.horizon.tv/dl/nl/ Show/my-prime/season  -> should be opened in Ziggo</a><br>
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">https://www.horizon.tv/dl/nl/ Show/my-prime  -> should be opened in Ziggo</a><br>
   
-<p><a href="https://www.horizon.tv/dl/ch/watchtv/station/538913319362/location/21656615412"> https://{HOSTNAME}/dl/{COUNTRY}/watchtv/station/{STATION_ID}/location/{LOCATION_ID} CH-FR locale
-
+<p><a href="https://www.horizon.tv/dl/ch/watchtv/station/757231655242/location/21656615412">https://{HOSTNAME}/dl/{COUNTRY}/watchtv/station/{STATION_ID}/location/{LOCATION_ID} Live item CH-FR locale
   
 <p> </p>
 <h5><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries</h5></p>
