--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 <p><a href="https://www.horizon.tv/dl/nl/myprime/show/crid:~~2F~~2Fupc.com~~2F5cf0986e-1370-49c3-ba10-af745f67678d">https://www.horizon.tv/dl/nl/ Show/my-prime  -> should be opened in Ziggo</a><br>
   
 <p><a href="https://www.horizon.tv/dl/ch/watchtv/station/757231655242/location/21656615412">https://{HOSTNAME}/dl/{COUNTRY}/watchtv/station/{STATION_ID}/location/{LOCATION_ID} Live item CH-FR locale
-  
+  <p><a href="https://www.horizon.tv/dl/ch/watchtv/station/714731047403//location/48323623160">https://{HOSTNAME}/dl/{COUNTRY}/watchtv/station/{STATION_ID}/location/{LOCATION_ID} Live item CH-FR locale
+<p><a href="https://www.horizon.tv/dl/ch/watchtv/station/location/48323623160">https://{HOSTNAME}/dl/{COUNTRY}/watchtv/station/{STATION_ID}/location/{LOCATION_ID} Live item CH-DE locale (not avail fo RF)
 <p> </p>
 <h5><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Other countries</h5></p>
 <p><a href="hgo://at/ondemand/show/crid:~~2F~~2Fupc.com~~2F926b1429-fc6a-4c80-aa68-2abdd5bbbc9f/season/crid:~~2F~~2Fupc.com~~2F66a40b0f-488e-4dae-849c-c2aebf999231/episode/crid:~~2F~~2Fupc.com~~2F2002~~2FBAMP2009000000325300">hgo://at On Demand item -> should be opened in HZN</a></p>
