--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
 <p><a href="https://www.horizon.tv/dl/ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000ABD7/3%20auf%20zwei/crid%3A~~2F~~2Fbds.tv~~2F625983816-imi%3A0010000000D47C6E/3%20auf%20zwei">https://www.horizon.tv/dl/ch/ Replay item -> should be opened in HZN</a></p>
 <p><a href="https://www.horizon.tv/dl/at/ondemand/show/crid:~~2F~~2Fupc.com~~2F926b1429-fc6a-4c80-aa68-2abdd5bbbc9f/season/crid:~~2F~~2Fupc.com~~2F66a40b0f-488e-4dae-849c-c2aebf999231/episode/crid:~~2F~~2Fupc.com~~2F2002~~2FBAMP2009000000325300">https://www.horizon.tv/dl/at/ On Demand item -> should be opened in HZN</a></p> 
 
+<p><a href="https://www.horizon.tv/dl/ch/home">hgo://ch/home -> should be opened in HZN</a> </p>  
+<p><a href="https://www.horizon.tv/dl/ch/myprime">https://www.horizon.tv/dl/ch/myprime -> should be opened in HZN</a> </p>  
+<p><a href="https://www.horizon.tv/dl/ch/ondemand">https://www.horizon.tv/dl/ch/ondemand -> should be opened in Ziggo</a></p>
+<p><a href="https://www.horizon.tv/dl/ch/tvguide">https://www.horizon.tv/dl/ch/tvguide -> should be opened in Ziggo</a></p>
+<p><a href="https://www.horizon.tv/dl/ch/myvideos">https://www.horizon.tv/dl/ch/myvideos -> should be opened in Ziggo</a></p>    
+<p><a href="https://www.horizon.tv/dl/ch/watchtv">https://www.horizon.tv/dl/ch/watchtv -> should be opened in Ziggo</a></p>     
+<p><a href="https://www.horizon.tv/dl/ch/">https://www.horizon.tv/dl/ch/ without Home -> should be opened in HZN</a> </p>
+<p><a href="https://www.horizon.tv/dl/ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F140941133/listing/crid:~~2F~~2Fbds.tv~~2F140941133-imi:0010000000D9F2F5">https://www.horizon.tv/dl/ch/ TV Guide item -> should be opened in HZN</a></p>
+<p><a href="https://www.horizon.tv/dl/ch/myprime/group/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000392376/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000392376">https://www.horizon.tv/dl/ch/ My prime item -> should be opened in HZN</a></p>
+    
 <p><h2><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>HZN. Deeplinking. Universal format https://www.horizon.tv/nl_nl.html</h2></p>
 <h5><a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NL</h5></p>
 <p><a href="https://www.horizon.tv/nl_nl/my-prime.html">My prime NL -> should be opened in Ziggo</a></p>
