--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <p><a href="https://www.horizon.tv/dl/ch/tv-guide/replay-asset.html/crid%3A~~2F~~2Feventis.nl~~2F00000000-0000-1000-0008-00000000ABD7/3%20auf%20zwei/crid%3A~~2F~~2Fbds.tv~~2F625983816-imi%3A0010000000D47C6E/3%20auf%20zwei">https://www.horizon.tv/dl/ch/ Replay item -> should be opened in HZN</a></p>
 <p><a href="https://www.horizon.tv/dl/at/ondemand/show/crid:~~2F~~2Fupc.com~~2F926b1429-fc6a-4c80-aa68-2abdd5bbbc9f/season/crid:~~2F~~2Fupc.com~~2F66a40b0f-488e-4dae-849c-c2aebf999231/episode/crid:~~2F~~2Fupc.com~~2F2002~~2FBAMP2009000000325300">https://www.horizon.tv/dl/at/ On Demand item -> should be opened in HZN</a></p> 
 
-<p><a href="https://www.horizon.tv/dl/ch/home">hgo://ch/home -> should be opened in HZN</a> </p>  
+<p><a href="https://www.horizon.tv/dl/ch/home">"https://www.horizon.tv/dl/ch/home -> should be opened in HZN</a> </p>  
 <p><a href="https://www.horizon.tv/dl/ch/myprime">https://www.horizon.tv/dl/ch/myprime -> should be opened in HZN</a> </p>  
 <p><a href="https://www.horizon.tv/dl/ch/ondemand">https://www.horizon.tv/dl/ch/ondemand -> should be opened in Ziggo</a></p>
 <p><a href="https://www.horizon.tv/dl/ch/tvguide">https://www.horizon.tv/dl/ch/tvguide -> should be opened in Ziggo</a></p>
