--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 
 <p><a href="https://www.horizon.tv/dl/ch/home">"https://www.horizon.tv/dl/ch/home -> should be opened in HZN</a> </p>  
 <p><a href="https://www.horizon.tv/dl/ch/myprime">https://www.horizon.tv/dl/ch/myprime -> should be opened in HZN</a> </p>  
-<p><a href="https://www.horizon.tv/dl/ch/ondemand">https://www.horizon.tv/dl/ch/ondemand -> should be opened in Ziggo</a></p>
-<p><a href="https://www.horizon.tv/dl/ch/tvguide">https://www.horizon.tv/dl/ch/tvguide -> should be opened in Ziggo</a></p>
-<p><a href="https://www.horizon.tv/dl/ch/myvideos">https://www.horizon.tv/dl/ch/myvideos -> should be opened in Ziggo</a></p>    
-<p><a href="https://www.horizon.tv/dl/ch/watchtv">https://www.horizon.tv/dl/ch/watchtv -> should be opened in Ziggo</a></p>     
+<p><a href="https://www.horizon.tv/dl/ch/ondemand">https://www.horizon.tv/dl/ch/ondemand -> should be opened in HZN</a></p>
+<p><a href="https://www.horizon.tv/dl/ch/tvguide">https://www.horizon.tv/dl/ch/tvguide -> should be opened in HZN</a></p>
+<p><a href="https://www.horizon.tv/dl/ch/myvideos">https://www.horizon.tv/dl/ch/myvideos -> should be opened in HZN</a></p>    
+<p><a href="https://www.horizon.tv/dl/ch/watchtv">https://www.horizon.tv/dl/ch/watchtv -> should be opened in HZN</a></p>     
 <p><a href="https://www.horizon.tv/dl/ch/">https://www.horizon.tv/dl/ch/ without Home -> should be opened in HZN</a> </p>
 <p><a href="https://www.horizon.tv/dl/ch/watchtv/station/27909159188/program/crid:~~2F~~2Fbds.tv~~2F140941133/listing/crid:~~2F~~2Fbds.tv~~2F140941133-imi:0010000000D9F2F5">https://www.horizon.tv/dl/ch/ TV Guide item -> should be opened in HZN</a></p>
 <p><a href="https://www.horizon.tv/dl/ch/myprime/group/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000392376/item/crid:~~2F~~2Fupc.com~~2F6006~~2FCDPF2009000000392376">https://www.horizon.tv/dl/ch/ My prime item -> should be opened in HZN</a></p>
